# swimming-pool

./: .gitignore  AGENTS.md  CLAUDE.md  exampleCLAUDE.md  lakehouse-architektur.md
clickhouse/: README.md  chi-hardened.yaml  chk-keeper.yaml  operator-hardening.yaml  s3-tiered-storage.md
data-gateway/: konzept.md  tech-stack.md
iceberg/: README.md  maintenance.md  table-design.md
iceberg/argo/: maintenance-workflow.yaml
iceberg/spark/: maintenance.py
lakekeeper/: README.md  accounts.md  logging.md  ui-preview-extensions.md  upgrade.md  values-dev.yaml  values-prod.yaml
lakekeeper/cedar/: configmap.yaml  policies.cedar
lakekeeper/interceptor/: .helmignore  Chart.yaml  Dockerfile  README.md  interceptor.py  nginx.conf  secret.example.yaml  values-dev.yaml  values-prod.yaml  values.yaml
lakekeeper/mcp/: README.md  opencode-commands.md  pyproject.toml  server.py
lakekeeper/mcp/src/lakekeeper_mcp/: __init__.py  server.py
lakekeeper/monitoring/: grafana-dashboard.json
lakekeeper/openfga/: secret.example.yaml  values.yaml
lakekeeper/role-sync/: configmap.yaml  secret.example.yaml  sync.py
spark/: README.md  architecture.md  best-practices.md  incremental-processing.md  kubernetes.md
starrocks/: README.md  configmap-cn.yaml  configmap-fe.yaml  logging.md  prometheus.md  starrocks-mcp-setup.md  values-dev.yaml  values-prod.yaml
starrocks/argo/: mv-orchestration.yaml
starrocks/mcp/: README.md
starrocks/secrets/: starrocks-s3-credentials.example.yaml
starrocks/sql/: example-mv.sql  lakekeeper-catalog.sql  (+3 more)
transform/: README.md  transform-spec.md
(+10 files in other folders)
