[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lakekeeper-mcp"
description = "MCP server exposing Lakekeeper Iceberg catalog metadata to LLM agents."
requires-python = ">=3.10"
keywords = ["mcp", "lakekeeper", "iceberg", "lakehouse", "fastmcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dynamic = ["version"]
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.27.0",
]

[project.scripts]
lakekeeper-mcp = "lakekeeper_mcp.server:main"

[tool.hatch.version]
path = "src/lakekeeper_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lakekeeper_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "src/lakekeeper_mcp",
    "pyproject.toml",
]
